@startuml

interface IUser {
   +isAuthUser():boolean
}

class UserImpl {
   +<<implement>> isAuthUser():boolean
}

class UserProxy {
   +<<implement>> isAuthUser():boolean
}

class ProxyClient {
    + main()
}

UserImpl ..up..|> IUser:request
UserProxy ..up..|> IUser:request
UserImpl <--left--o UserProxy
ProxyClient -left-> IUser

@enduml